--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -21,10 +21,11 @@
           <input id="mantenimiento" type="checkbox">
           <label for="mantenimiento">Mantenimiento</label>
           <ul class="nav-list">
-            <li><a class="nav-link" routerLinkActive="active">Repuestos</a></li>
-            <li><a class="nav-link" routerLinkActive="active">Orden</a></li>
-            <li><a class="nav-link" routerLinkActive="active">Solicitud</a></li>
-
+            <li>
+              <a routerLink="./mantenimiento/solicitud"
+                   class="nav-link" routerLinkActive="active">Solicitud</a>
+            </li>
+            <li><a class="nav-link" routerLinkActive="active">Orden Trabajo</a></li>
           </ul>
         </section>
         <a class="nav-link">
