Se crea la pantalla para la solicitud de repuestos. Se agregan cambios solicitados por el cliente.

--- a/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.css
+++ b/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.css
@@ -1,16 +1,20 @@
-.form-contrato-label {
+.form-add-edit-contrato-label {
   font-weight: bold;
 }
 
-.form-addEditContrato-title {
+.form-add-edit-contrato-title {
   font-weight: bold;
   font-size: 24px;
   text-align: center;
 }
 
-.btn-select-equipo {
+.form-add-edit-contrato-btn-select-equipo {
   position: absolute;
   right: 0%;
   left: 1%;
   top: -16%;
+}
+
+.selectEquipo {
+  background-color: darkgrey !important;
 }
