--- a/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud/add-edit-solicitud.component.css
+++ b/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud/add-edit-solicitud.component.css
@@ -11,3 +11,7 @@
 .form-add-edit-solicitud-btn-add-resp {
   margin-top: 1% !important;
 }
+
+.selectRepuesto {
+  background-color: darkgrey !important;
+}
