--- a/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.html
@@ -1,116 +1,191 @@
-<h5 class="form-addEditContrato-title">{{tituloForm }}</h5>
+<h5 class="form-add-edit-contrato-title">{{tituloForm }}</h5>
 <form class="compact" #contratoForm="ngForm">
+  <!-- errors -->
+  <div class="alert alert-danger alert-sm" *ngIf="error">
+    <div class="alert-items">
+      <div class="alert-item static">
+        <div class="alert-icon-wrapper">
+          <clr-icon class="alert-icon"
+                    shape="exclamation-circle">
+          </clr-icon>
+        </div>
+        <span class="alert-text">{{errorMessage}}</span>
+      </div>
+    </div>
+    <button type="button" class="close" aria-label="Close"
+            (click)="error = false">
+      <clr-icon aria-hidden="true" shape="close"></clr-icon>
+    </button>
+  </div>
+
   <section class="form-block">
+    <!--información gral del contrato-->
     <div class="form-group row flex-items-xs-left">
-      <!--información gral del contrato-->
-      <div class="col-xs-6">
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3">
-            <label class="form-contrato-label" for="nroContrato">Nro. Contrato:</label>
-          </div>
-          <div class="col-xs-6">
-            <input class="form-control" id="nroContrato"
-                   name="nroContrato" [(ngModel)]="contrato.numeroContrato"
-                   #nroContratoInput="ngModel">
-          </div>
-        </div>
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label required" for="id">ID:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="id" required
+               name="id" [(ngModel)]="contrato.id"
+               #contratoId>
+      </div>
 
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3">
-            <label class="form-contrato-label" for="licitacion">Licitación:</label>
-          </div>
-          <div class="col-xs-6">
-            <input class="form-control" id="licitacion"
-                   name="licitacion" [(ngModel)]="contrato.nombreLicitacion"
-                   #licitacionInput="ngModel">
-          </div>
-        </div>
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label" for="nroContrato">Nro. Contrato:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="nroContrato"
+               name="nroContrato" [(ngModel)]="contrato.numeroContrato">
+      </div>
+    </div>
 
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3">
-            <label class="form-contrato-label" for="estado">Estado:</label>
-          </div>
-          <div class="col-xs-6">
-            <div class="select form-control">
-            <select id="estado" #selectEstado name="estado"
-                    [(ngModel)]="contrato.estadoContrato"
-                    (change)="onSelectedEstadoContrado(selectEstado.value)">
-              <option *ngFor="let estado of estadosContrato"
-                      value={{estado.nombre}}>{{estado.nombre}}
-              </option>
-            </select>
-            </div>
-          </div>
-        </div>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label required" for="tipo">Tipo Procedimiento:</label>
+      </div>
+      <div class="col-xs-4">
+        <input class="form-control" id="tipo" required
+               name="tipo" [(ngModel)]="contrato.tipoProcedimiento">
+      </div>
+    </div>
 
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3">
-            <label class="form-contrato-label" for="inicio">Inicio:</label>
-          </div>
-          <div class="col-xs-6">
-            <input class="form-control" type="date"
-                   id="inicio" size="35"
-                   name="inicio"
-                   [(ngModel)]="contrato.fechaInicio"
-                   #fechaIni="ngModel">
-          </div>
-        </div>
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-3">
-            <label class="form-contrato-label" for="fin">Finalización:</label>
-          </div>
-          <div class="col-xs-6">
-            <input class="form-control" type="date"
-                   id="fin" size="35"
-                   name="fin"
-                   [(ngModel)]="contrato.fechaFin"
-                   #fechaFin="ngModel">
-          </div>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label required" for="convocante">Convocante:</label>
+      </div>
+      <div class="col-xs-5">
+        <input class="form-control" id="convocante" required
+               name="convocante" [(ngModel)]="contrato.convocante">
+      </div>
+    </div>
+
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label required" for="licitacion">Nombre Licitación:</label>
+      </div>
+      <div class="col-xs-5">
+        <input class="form-control" id="licitacion" required
+               name="licitacion" [(ngModel)]="contrato.nombreLicitacion">
+      </div>
+    </div>
+
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label" for="estado">Estado:</label>
+      </div>
+      <div class="col-xs-2">
+        <div class="select form-control">
+          <select id="estado" #selectEstado name="estado"
+                  [(ngModel)]="contrato.estadoContrato"
+                  (change)="onSelectedEstadoContrado(selectEstado.value)">
+            <option *ngFor="let estado of estadosContrato"
+                    value={{estado.nombre}}>{{estado.nombre}}
+            </option>
+          </select>
         </div>
       </div>
 
-      <!--lista de equipos-->
-      <div class="col-xs-6">
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-contrato-label" for="equipo">Equipos:</label>
-          </div>
-          <div class="col-xs-6">
-            <div class="select form-control">
-            <select id="equipo" #selectEquipo name="equipo"
-                    [(ngModel)]="equipoId"
-                    (change)="onSelectedEquipo(selectEquipo.value)">
-              <option *ngFor="let equipo of equipos"
-                      value={{equipo.id}}>{{equipo.numeroSerie}}
-              </option>
-            </select>
-            </div>
-          </div>
-          <div class="col-xs-1">
-            <button class="btn-select-equipo btn btn-sm btn-success"
-                    (click)="addEquipo()"
-                    [disabled]="equipoId == null">
-              <clr-icon shape="add"></clr-icon>
-              Add
+      <div class="col-xs-1">
+        <label class="form-add-edit-contrato-label required" for="inicio">Inicio:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" type="date"
+               id="inicio" required
+               name="inicio"
+               [(ngModel)]="contrato.fechaInicio"
+               #fechaIni="ngModel">
+      </div>
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label required" for="fin">Finalización:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" type="date"
+               id="fin" required
+               name="fin"
+               [(ngModel)]="contrato.fechaFin"
+               #fechaFin="ngModel">
+      </div>
+    </div>
+
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label required">Representante:</label>
+      </div>
+      <div class="col-xs-5" *ngIf="contrato.representante != null">
+        <input class="form-control" id="representante"
+               name="representante" [(ngModel)]="equipo.representante.nombre"
+               #equipoRepres="ngModel"
+               disabled>
+      </div>
+
+      <div class="col-xs-5" *ngIf="contrato.representante == null">
+        <input class="form-control" id="repre"
+               disabled>
+      </div>
+
+      <div class="col-xs-1">
+        <button class="btn-add-repre btn btn-sm btn-success"
+                (click)="addRepresentante()">
+          <clr-icon shape="user"></clr-icon>
+          {{buttonTitle}}
+        </button>
+      </div>
+    </div>
+
+
+    <!--lista de equipos-->
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-contrato-label" for="equipo">Equipos:</label>
+      </div>
+      <div class="col-xs-5">
+        <div class="select form-control">
+          <select id="equipo" #selectEquipo name="equipo"
+                  [(ngModel)]="equipoId"
+                  (change)="onSelectedEquipo(selectEquipo.value)">
+            <option *ngFor="let equipo of equipos"
+                    value={{equipo.id}}>{{equipo.numeroSerie}} - {{equipo.modeloEquipo.marca}} -
+              {{equipo.modeloEquipo.modelo}} - {{equipo.tipoEquipo.nombreGenerico}}
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="col-xs-1">
+        <button class="form-add-edit-contrato-btn-select-equipo btn btn-sm btn-success"
+                (click)="addEquipo()"
+                [disabled]="equipoId == null">
+          <clr-icon shape="add"></clr-icon>
+          Add
+        </button>
+      </div>
+    </div>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-12">
+        <clr-datagrid *ngIf="selectedEquipos.length > 0">
+          <clr-dg-action-bar>
+            <button class="btn btn-sm btn-warning"
+                    [disabled]="!isSelectedEquipo"
+                    (click)="onDeleteEquipo()">
+              Delete
             </button>
-          </div>
-        </div>
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-12">
-            <clr-datagrid *ngIf="selectedEquipos.length > 0">
-              <clr-dg-column>Nro. Serie</clr-dg-column>
-              <clr-dg-column>Tipo</clr-dg-column>
-              <clr-dg-column>Modelo</clr-dg-column>
-              <clr-dg-column>Ubicación</clr-dg-column>
-              <clr-dg-row *ngFor="let equipo of selectedEquipos">
-                <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-                <clr-dg-cell>{{equipo.tipoEquipo.nombreGenerico}}</clr-dg-cell>
-                <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
-                <clr-dg-cell>{{equipo.ubicacion.numeroSala}}</clr-dg-cell>
-              </clr-dg-row>
-            </clr-datagrid>
-          </div>
-        </div>
+          </clr-dg-action-bar>
+          <clr-dg-column>Nro. Serie</clr-dg-column>
+          <clr-dg-column>Tipo</clr-dg-column>
+          <clr-dg-column>Marca</clr-dg-column>
+          <clr-dg-column>Modelo</clr-dg-column>
+          <clr-dg-column>Nro. Patrimonial</clr-dg-column>
+          <clr-dg-column>Estado</clr-dg-column>
+          <clr-dg-row *ngFor="let equipo of selectedEquipos"
+                      (click)="onSelectEquipo(equipo)"
+                      [class.selectEquipo]="equipo === selectedEquipo">
+            <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
+            <clr-dg-cell>{{equipo.tipoEquipo.nombreGenerico}}</clr-dg-cell>
+            <clr-dg-cell>{{equipo.modeloEquipo.marca}}</clr-dg-cell>
+            <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
+            <clr-dg-cell>{{equipo.numeroPatrimonial}}</clr-dg-cell>
+            <clr-dg-cell>{{equipo.estado}}</clr-dg-cell>
+          </clr-dg-row>
+        </clr-datagrid>
       </div>
     </div>
   </section>
@@ -129,3 +204,63 @@
     </button>
   </section>
 </form>
+
+
+<!--Modal para agregar o editar los datos de un representante-->
+<clr-modal [(clrModalOpen)]="modalRepreOpen" [clrModalClosable]="false">
+  <h3 class="modal-title form-add-edit-contrato-label">{{modalTitle}}</h3>
+  <div class="modal-body">
+    <form class="compact" #repreForm="ngForm">
+      <section class="form-block">
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-contrato-label required" for="nombre">Nombre:</label>
+          </div>
+          <div class="col-xs-4">
+            <input class="form-control" id="nombre" required
+                   name="nombre" [(ngModel)]="representante.nombre">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-contrato-label" for="direccion">Dirección:</label>
+          </div>
+          <div class="col-xs-8">
+            <input class="form-control" id="direccion"
+                   name="direccion" [(ngModel)]="representante.direccion">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-contrato-label" for="email">Email:</label>
+          </div>
+          <div class="col-xs-8">
+            <input class="form-control" id="email"
+                   name="email" [(ngModel)]="representante.email">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-contrato-label required" for="telefono">Telefono:</label>
+          </div>
+          <div class="col-xs-4">
+            <input class="form-control" id="telefono" required
+                   name="telefono" [(ngModel)]="representante.telefono">
+          </div>
+        </div>
+      </section>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-sm" type="button"
+            (click)="modalRepreOpen = false">Cancel
+    </button>
+    <button class="btn btn-sm btn-success" type="button"
+            [disabled]="(repreForm.form.invalid )"
+            (click)="onAddRepresentante()">Add
+    </button>
+  </div>
+</clr-modal>
