--- a/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud/add-edit-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud/add-edit-solicitud.component.html
@@ -1,4 +1,5 @@
 <h5 class="form-add-edit-solicitud-title">{{tituloForm }}</h5>
+<!--Formulario para la solicitud de servicio-->
 <form class="compact" *ngIf="selectedSolicitudServicio" #solicitudServicioForm="ngForm">
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
@@ -7,30 +8,27 @@
       </div>
       <div class="col-xs-3">
         <input class="form-control" id="estado"
-               name="estado" [(ngModel)]="solicitudServicio.estado"
-               #solicitudServicioEstado="ngModel">
+               name="estado" [(ngModel)]="solicitudServicio.estado">
       </div>
       <div class="col-xs-1"></div>
       <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label" for="fechaSolicitud">Fecha:</label>
+        <label class="form-add-edit-solicitud-label required" for="fechaSolicitud">Fecha:</label>
       </div>
       <div class="col-xs-3">
         <input class="form-control" type="date"
-               id="fechaSolicitud" size="35"
+               id="fechaSolicitud" required
                name="fechaSolicitud"
-               [(ngModel)]="solicitudServicio.fechaSolicitud"
-               #fechaSol="ngModel">
+               [(ngModel)]="solicitudServicio.fechaSolicitud">
       </div>
     </div>
 
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Responsable:</label>
+        <label class="form-add-edit-solicitud-label required">Responsable:</label>
       </div>
       <div class="col-xs-3" *ngIf="solicitudServicio.responsable != null">
-        <input class="form-control" id="responsable"
+        <input class="form-control" id="responsable" required
                name="responsable" [(ngModel)]="solicitudServicio.responsable.nombre"
-               #solicitudServicioResponsable="ngModel"
                disabled>
       </div>
 
@@ -43,7 +41,7 @@
         <button class="form-add-edit-solicitud-btn-add-resp btn btn-sm btn-success"
                 (click)="addResponsables()">
           <clr-icon shape="user"></clr-icon>
-          {{buttonTitle}}
+          {{buttonTitleResp}}
         </button>
       </div>
 
@@ -53,8 +51,7 @@
       <div class="col-xs-4">
             <textarea class="form-control" id="tarea" rows="5"
                       maxlength="2000"
-                      name="tarea" [(ngModel)]="solicitudServicio.tarea"
-                      #solicitudServicioTarea="ngModel">
+                      name="tarea" [(ngModel)]="solicitudServicio.tarea">
             </textarea>
       </div>
     </div>
@@ -75,21 +72,105 @@
   </section>
 </form>
 
+<!--Formulario para la solicitud de repuestos-->
+<form class="compact" *ngIf="!selectedSolicitudServicio" #solicitudRepuestoForm="ngForm">
+  <section class="form-block">
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-1">
+        <label class="form-add-edit-solicitud-label" for="estadoRe">Estado:</label>
+      </div>
+      <div class="col-xs-3">
+        <input class="form-control" id="estadoRe"
+               name="estadoRe" [(ngModel)]="solicitudRepuesto.estado">
+      </div>
+      <div class="col-xs-1"></div>
+      <div class="col-xs-1">
+        <label class="form-add-edit-solicitud-label required" for="fechaSolicitudRe">Fecha:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" type="date"
+               id="fechaSolicitudRe" required
+               name="fechaSolicitudRe"
+               [(ngModel)]="solicitudRepuesto.fechaSolicitud">
+      </div>
+    </div>
+
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label required">Repuestos:
+        </label>
+      </div>
+      <div class="col-xs-1">
+        <button class="btn btn-sm btn-success"
+                (click)="addRepuesto()">
+          <clr-icon shape="plus"></clr-icon>
+          {{buttonTitleRepuesto}}
+        </button>
+      </div>
+    </div>
+
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-12">
+        <clr-datagrid *ngIf="solicitudRepuesto.repuestos!= null &&
+        solicitudRepuesto.repuestos.length > 0">
+          <clr-dg-action-bar>
+            <button class="btn btn-sm btn-warning"
+                    [disabled]="!isSelectedRepuesto"
+                    (click)="onDeleteRepuesto()">
+              Delete
+            </button>
+            <button class="btn btn-sm btn-success"
+                    [disabled]="!isSelectedRepuesto"
+                    (click)="onEditRepuesto()">
+              Edit
+            </button>
+          </clr-dg-action-bar>
+          <clr-dg-column>Código</clr-dg-column>
+          <clr-dg-column>Descripción</clr-dg-column>
+          <clr-dg-column>Cantidad Adquirida</clr-dg-column>
+          <clr-dg-column>Precio</clr-dg-column>
+          <clr-dg-row *ngFor="let repuesto of solicitudRepuesto.repuestos"
+                      (click)="onSelectedRepuesto(repuesto)"
+                      [class.selectRepuesto]="repuesto === selectedRepuesto">
+            <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>
+            <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>
+            <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>
+            <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
+          </clr-dg-row>
+        </clr-datagrid>
+      </div>
+    </div>
+  </section>
+  <section class="form-block">
+    <button class="btn btn-sm btn-success"
+            [disabled]="(solicitudRepuestoForm.form.invalid )"
+            (click)="onSaveSolicitud()">
+      <clr-icon shape="floppy"></clr-icon>
+      Save
+    </button>
+
+    <button class="btn btn-sm btn-secondary"
+            (click)="onCancelAddEditSolicitud()">
+      <clr-icon shape="window-close"></clr-icon>
+      Cancel
+    </button>
+  </section>
+</form>
+
 
 <!--Modal para agregar o editar los datos de un responsable-->
 <clr-modal [(clrModalOpen)]="modalResponsableOpen" [clrModalClosable]="false">
-  <h3 class="modal-title">{{modalTitle}}</h3>
+  <h3 class="modal-title form-add-edit-solicitud-label">{{modalTitleRepre}}</h3>
   <div class="modal-body">
     <form class="compact" #responsableForm="ngForm">
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label" for="nombre">Nombre:</label>
+            <label class="form-add-edit-solicitud-label required" for="nombre">Nombre:</label>
           </div>
           <div class="col-xs-4">
-            <input class="form-control" id="nombre"
-                   name="nombre" [(ngModel)]="responsable.nombre"
-                   #nombreRepre="ngModel">
+            <input class="form-control" id="nombre" required
+                   name="nombre" [(ngModel)]="responsable.nombre">
           </div>
         </div>
 
@@ -99,8 +180,7 @@
           </div>
           <div class="col-xs-8">
             <input class="form-control" id="direccion"
-                   name="direccion" [(ngModel)]="responsable.direccion"
-                   #direRepre="ngModel">
+                   name="direccion" [(ngModel)]="responsable.direccion">
           </div>
         </div>
 
@@ -110,19 +190,17 @@
           </div>
           <div class="col-xs-8">
             <input class="form-control" id="email"
-                   name="email" [(ngModel)]="responsable.email"
-                   #emailRepre="ngModel">
+                   name="email" [(ngModel)]="responsable.email">
           </div>
         </div>
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label" for="telefono">Telefono:</label>
+            <label class="form-add-edit-solicitud-label required" for="telefono">Telefono:</label>
           </div>
           <div class="col-xs-4">
-            <input class="form-control" id="telefono"
-                   name="telefono" [(ngModel)]="responsable.telefono"
-                   #telefonoRepre="ngModel">
+            <input class="form-control" id="telefono" required
+                   name="telefono" [(ngModel)]="responsable.telefono">
           </div>
         </div>
       </section>
@@ -139,3 +217,159 @@
   </div>
 </clr-modal>
 
+<!--Modal para agregar o editar los datos de un repuesto-->
+<clr-modal [(clrModalOpen)]="modalRepuestosOpen" [clrModalClosable]="false"
+           [clrModalSize]="'lg'"
+           *ngIf="repuesto">
+  <h3 class="modal-title form-add-edit-solicitud-label">{{modalTitleRepuesto}}</h3>
+  <div class="modal-body">
+    <form class="compact" #repuestoForm="ngForm">
+      <section class="form-block">
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required" for="codigo">Código:</label>
+          </div>
+          <div class="col-xs-3">
+            <input class="form-control" id="codigo" required
+                   name="codigo" [(ngModel)]="repuesto.codigo">
+          </div>
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label" for="descripcionArt">Descripción:</label>
+          </div>
+          <div class="col-xs-4">
+            <input class="form-control" id="descripcionArt"
+                   name="descripcionArt" [(ngModel)]="repuesto.descripcionArticulo">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required" for="precio">Precio:</label>
+          </div>
+          <div class="col-xs-3">
+            <input class="form-control" id="precio" required
+                   name="precio" [(ngModel)]="repuesto.precio">
+          </div>
+
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required" for="fecha">Fecha:</label>
+          </div>
+          <div class="col-xs-3">
+            <input class="form-control" type="date"
+                   id="fecha" name="fecha" required
+                   [(ngModel)]="repuesto.fechaActualizacion">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required" for="cantidadAd">Cantidad Adquirida:</label>
+          </div>
+          <div class="col-xs-3">
+            <input class="form-control" id="cantidadAd" required
+                   name="cantidadAd" [(ngModel)]="repuesto.cantidadAdquirida">
+          </div>
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label" for="cantidadRes">Cantidad Restante:</label>
+          </div>
+          <div class="col-xs-3">
+            <input class="form-control" id="cantidadRes"
+                   name="cantidadRes" [(ngModel)]="repuesto.cantidadRestante">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required">Tipo:</label>
+          </div>
+          <div class="col-xs-3" *ngIf="repuesto.tipoEquipo != null">
+            <div class="select form-control">
+              <select id="selectTipo" #selectedTipo name="selectTipo"
+                      [(ngModel)]="repuesto.tipoEquipo.id"
+                      (change)="onSelectedTipoEquipo(selectedTipo.value)">
+                <option *ngFor="let tipo of tipos"
+                        value={{tipo.id}}>{{tipo.nombreGenerico}}, {{tipo.tipo}}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-3" *ngIf="repuesto.tipoEquipo == null">
+            <div class="select form-control">
+              <select id="tipoE" disabled>
+                <option disabled>Agregar Tipo</option>
+              </select>
+            </div>
+          </div>
+          <!--<div class="col-xs-1">-->
+            <!--<button class="form-add-edit-equipo-btn-add btn btn-sm btn-success"-->
+                    <!--(click)="addTipoEquipo()">-->
+              <!--<clr-icon shape="plus"></clr-icon>-->
+              <!--{{buttonTitleTipo}}-->
+            <!--</button>-->
+          <!--</div>-->
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required">Modelo:</label>
+          </div>
+          <div class="col-xs-3" *ngIf="repuesto.modeloEquipo != null">
+            <div class="select form-control">
+              <select id="selectModelo" #selectedModelo name="selectModelo"
+                      [(ngModel)]="repuesto.modeloEquipo.id"
+                      (change)="onSelectedModeloEquipo(selectedModelo.value)">
+                <option *ngFor="let modelo of modelos"
+                        value={{modelo.id}}>{{modelo.modelo}}, {{modelo.marca}}, {{modelo.clase}}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="col-xs-3" *ngIf="repuesto.modeloEquipo == null">
+            <div class="select form-control">
+              <select id="modeloE" name="modeloE" disabled>
+                <option disabled>Agregar Modelo</option>
+              </select>
+            </div>
+          </div>
+          <!--<div class="col-xs-1">-->
+            <!--<button class="form-add-edit-equipo-btn-add btn btn-sm btn-success"-->
+                    <!--(click)="addModeloEquipo()">-->
+              <!--<clr-icon shape="plus"></clr-icon>-->
+              <!--{{buttonTitleModelo}}-->
+            <!--</button>-->
+          <!--</div>-->
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label required">Representante:</label>
+          </div>
+          <div class="col-xs-2" *ngIf="repuesto.representante != null">
+            <input class="form-control" id="representante" required
+                   name="representante" [(ngModel)]="repuesto.representante.nombre"
+                   disabled>
+          </div>
+
+          <div class="col-xs-3" *ngIf="repuesto.representante == null">
+            <input class="form-control" id="repre"
+                   disabled>
+          </div>
+
+          <div class="col-xs-1">
+            <button class="form-add-edit-solicitud-btn-add-resp btn btn-sm btn-success"
+                    (click)="addRepresentante()">
+              <clr-icon shape="user"></clr-icon>
+              {{buttonTitleRepre}}
+            </button>
+          </div>
+        </div>
+      </section>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-sm" type="button"
+            (click)="modalRepuestosOpen = false">Cancel
+    </button>
+    <button class="btn btn-sm btn-success" type="button"
+            [disabled]="(repuestoForm.form.invalid )"
+            (click)="onAddRepuesto()">Add
+    </button>
+  </div>
+</clr-modal>
