Se realizaron los cambios solicitados para las pantallas de equipo y contrato.

--- a/client-app/src/app/home/equipo/add-edit-equipo/add-edit-equipo.component.css
+++ b/client-app/src/app/home/equipo/add-edit-equipo/add-edit-equipo.component.css
@@ -1,5 +1,5 @@
 .form-add-edit-equipo-label {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .form-add-edit-equipo-title {
@@ -10,4 +10,8 @@
 
 .form-add-edit-equipo-btn-add {
   margin-top: 1% !important;
+}
+
+.col-label-equipo {
+  text-align: right !important;
 }
