--- a/client-app/src/app/home/equipo/equipo.component.html
+++ b/client-app/src/app/home/equipo/equipo.component.html
@@ -85,7 +85,7 @@
 <app-add-edit-equipo
   *ngIf="showFormAbmEquipo"
   [equipo]='selectedEquipo'
-  [tituloForm]='formtitle'
+  [tituloForm]='formTitle'
   [isEdit]= 'isEdit'
   (onCanceled)="onCancelAddEditEquipo($event)"
   (onFinished)="onCloseAddEditEquipo($event)">
