--- a/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.css
+++ b/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.css
@@ -1,5 +1,5 @@
 .form-add-edit-contrato-label {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .form-add-edit-contrato-title {
@@ -10,11 +10,19 @@
 
 .form-add-edit-contrato-btn-select-equipo {
   position: absolute;
-  right: 0%;
+  right: 0;
   left: 1%;
   top: -16%;
 }
 
 .selectEquipo {
   background-color: darkgrey !important;
+}
+
+.col-label-contrato {
+  text-align: right !important;
+}
+
+.btn-add-representante {
+  margin-top: -1% !important;
 }
