--- a/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.html
+++ b/client-app/src/app/home/contrato/add-edit-contrato/add-edit-contrato.component.html
@@ -21,7 +21,7 @@
   <section class="form-block">
     <!--información gral del contrato-->
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label required" for="id">ID:</label>
       </div>
       <div class="col-xs-2">
@@ -30,7 +30,7 @@
                #contratoId>
       </div>
 
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label" for="nroContrato">Nro. Contrato:</label>
       </div>
       <div class="col-xs-2">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label required" for="tipo">Tipo Procedimiento:</label>
       </div>
       <div class="col-xs-4">
@@ -50,7 +50,7 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label required" for="convocante">Convocante:</label>
       </div>
       <div class="col-xs-5">
@@ -60,7 +60,7 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label required" for="licitacion">Nombre Licitación:</label>
       </div>
       <div class="col-xs-5">
@@ -70,7 +70,7 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label" for="estado">Estado:</label>
       </div>
       <div class="col-xs-2">
@@ -85,7 +85,7 @@
         </div>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-xs-1 col-label-contrato">
         <label class="form-add-edit-contrato-label required" for="inicio">Inicio:</label>
       </div>
       <div class="col-xs-2">
@@ -95,7 +95,7 @@
                [(ngModel)]="contrato.fechaInicio"
                #fechaIni="ngModel">
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label required" for="fin">Finalización:</label>
       </div>
       <div class="col-xs-2">
@@ -108,12 +108,12 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label required">Representante:</label>
       </div>
       <div class="col-xs-5" *ngIf="contrato.representante != null">
         <input class="form-control" id="representante"
-               name="representante" [(ngModel)]="equipo.representante.nombre"
+               name="representante" [(ngModel)]="contrato.representante.nombre"
                #equipoRepres="ngModel"
                disabled>
       </div>
@@ -123,7 +123,7 @@
                disabled>
       </div>
 
-      <div class="col-xs-1">
+      <div class="col-xs-1 btn-add-representante">
         <button class="btn-add-repre btn btn-sm btn-success"
                 (click)="addRepresentante()">
           <clr-icon shape="user"></clr-icon>
@@ -135,7 +135,7 @@
 
     <!--lista de equipos-->
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
+      <div class="col-xs-2 col-label-contrato">
         <label class="form-add-edit-contrato-label" for="equipo">Equipos:</label>
       </div>
       <div class="col-xs-5">
@@ -145,7 +145,7 @@
                   (change)="onSelectedEquipo(selectEquipo.value)">
             <option *ngFor="let equipo of equipos"
                     value={{equipo.id}}>{{equipo.numeroSerie}} - {{equipo.modeloEquipo.marca}} -
-              {{equipo.modeloEquipo.modelo}} - {{equipo.tipoEquipo.nombreGenerico}}
+              {{equipo.modeloEquipo.modelo}} - {{equipo.tipoEquipo.tipo}}
             </option>
           </select>
         </div>
@@ -179,7 +179,7 @@
                       (click)="onSelectEquipo(equipo)"
                       [class.selectEquipo]="equipo === selectedEquipo">
             <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
-            <clr-dg-cell>{{equipo.tipoEquipo.nombreGenerico}}</clr-dg-cell>
+            <clr-dg-cell>{{equipo.tipoEquipo.tipo}}</clr-dg-cell>
             <clr-dg-cell>{{equipo.modeloEquipo.marca}}</clr-dg-cell>
             <clr-dg-cell>{{equipo.modeloEquipo.modelo}}</clr-dg-cell>
             <clr-dg-cell>{{equipo.numeroPatrimonial}}</clr-dg-cell>
@@ -213,42 +213,60 @@
     <form class="compact" #repreForm="ngForm">
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-add-edit-contrato-label required" for="nombre">Nombre:</label>
+          <div class="col-xs-3 col-label-contrato">
+            <label class="form-add-edit-contrato-label required" for="nombre">Nombre/Empresa:</label>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-9">
             <input class="form-control" id="nombre" required
                    name="nombre" [(ngModel)]="representante.nombre">
           </div>
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
+          <div class="col-xs-3 col-label-contrato">
             <label class="form-add-edit-contrato-label" for="direccion">Dirección:</label>
           </div>
-          <div class="col-xs-8">
+          <div class="col-xs-9">
             <input class="form-control" id="direccion"
                    name="direccion" [(ngModel)]="representante.direccion">
           </div>
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
+          <div class="col-xs-3 col-label-contrato">
             <label class="form-add-edit-contrato-label" for="email">Email:</label>
           </div>
-          <div class="col-xs-8">
+          <div class="col-xs-9">
             <input class="form-control" id="email"
                    name="email" [(ngModel)]="representante.email">
           </div>
         </div>
 
         <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
+          <div class="col-xs-3 col-label-contrato">
             <label class="form-add-edit-contrato-label required" for="telefono">Telefono:</label>
           </div>
-          <div class="col-xs-4">
+          <div class="col-xs-3">
             <input class="form-control" id="telefono" required
                    name="telefono" [(ngModel)]="representante.telefono">
+          </div>
+
+          <div class="col-xs-3">
+            <label class="form-add-edit-contrato-label required" for="contacto">Nro. Contacto:</label>
+          </div>
+          <div class="col-xs-3">
+            <input class="form-control" id="contacto" required
+                   name="contacto" [(ngModel)]="representante.telefonoContacto">
+          </div>
+        </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-3 col-label-contrato">
+            <label class="form-add-edit-contrato-label required" for="telefono">Cel.:</label>
+          </div>
+          <div class="col-xs-4">
+            <input class="form-control" id="cel" required
+                   name="cel" [(ngModel)]="representante.celular">
           </div>
         </div>
       </section>
