--- a/client-app/src/app/home/home.component.html
+++ b/client-app/src/app/home/home.component.html
@@ -23,7 +23,7 @@
           <ul class="nav-list">
             <li>
               <a routerLink="./mantenimiento/solicitud"
-                   class="nav-link" routerLinkActive="active">Solicitud</a>
+                 class="nav-link" routerLinkActive="active">Crear Solicitud de Servicio</a>
             </li>
             <li><a class="nav-link" routerLinkActive="active">Orden Trabajo</a></li>
           </ul>
