--- a/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud/add-edit-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud/add-edit-solicitud.component.html
@@ -10,7 +10,6 @@
         <input class="form-control" id="estado"
                name="estado" [(ngModel)]="solicitudServicio.estado">
       </div>
-      <div class="col-xs-1"></div>
       <div class="col-xs-2">
         <label class="form-add-edit-solicitud-label required" for="fechaSolicitud">Fecha:</label>
       </div>
@@ -24,38 +23,76 @@
 
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label required">Responsable:</label>
+        <label class="form-add-edit-solicitud-label required">Personal que informó el problema:</label>
       </div>
-      <div class="col-xs-3" *ngIf="solicitudServicio.responsable != null">
-        <input class="form-control" id="responsable" required
-               name="responsable" [(ngModel)]="solicitudServicio.responsable.nombre"
-               disabled>
-      </div>
-
-      <div class="col-xs-3" *ngIf="solicitudServicio.responsable == null">
-        <input class="form-control" id="respons"
-               disabled>
+      <div class="col-xs-3">
+        <input class="form-control" id="personal"
+               [(ngModel)]="solicitudServicio.personalReporte">
       </div>
 
-      <div class="col-xs-1">
-        <button class="form-add-edit-solicitud-btn-add-resp btn btn-sm btn-success"
-                (click)="addResponsables()">
-          <clr-icon shape="user"></clr-icon>
-          {{buttonTitleResp}}
-        </button>
-      </div>
-
-      <div class="col-xs-1">
-        <label class="form-add-edit-solicitu-label" for="tarea">Tarea:</label>
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitu-label" for="descriptionProb">Descripción del Problema:</label>
       </div>
       <div class="col-xs-4">
-            <textarea class="form-control" id="tarea" rows="5"
+            <textarea class="form-control" id="descriptionProb" rows="3"
                       maxlength="2000"
-                      name="tarea" [(ngModel)]="solicitudServicio.tarea">
+                      name="descriptionProb" [(ngModel)]="solicitudServicio.descripcionProblema">
             </textarea>
       </div>
     </div>
   </section>
+
+  <!--equipos-->
+  <h6 class="form-add-edit-solicitud-title">Información del Equipo</h6>
+  <section class="form-block">
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label">Nro. Serie:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="serie">
+      </div>
+
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label">Nro. Patrimonial:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="patrimonial">
+      </div>
+
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label">Tipo:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="Tipo">
+      </div>
+    </div>
+
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label">Modelo:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="modelo">
+      </div>
+
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label">Ubicación:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="Ubicación">
+      </div>
+
+      <div class="col-xs-2">
+        <label class="form-add-edit-solicitud-label">Contrato:</label>
+      </div>
+      <div class="col-xs-2">
+        <input class="form-control" id="Contrato">
+      </div>
+
+    </div>
+  </section>
+
   <section class="form-block">
     <button class="btn btn-sm btn-success"
             [disabled]="(solicitudServicioForm.form.invalid )"
@@ -158,65 +195,6 @@
 </form>
 
 
-<!--Modal para agregar o editar los datos de un responsable-->
-<clr-modal [(clrModalOpen)]="modalResponsableOpen" [clrModalClosable]="false">
-  <h3 class="modal-title form-add-edit-solicitud-label">{{modalTitleRepre}}</h3>
-  <div class="modal-body">
-    <form class="compact" #responsableForm="ngForm">
-      <section class="form-block">
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required" for="nombre">Nombre:</label>
-          </div>
-          <div class="col-xs-4">
-            <input class="form-control" id="nombre" required
-                   name="nombre" [(ngModel)]="responsable.nombre">
-          </div>
-        </div>
-
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label" for="direccion">Dirección:</label>
-          </div>
-          <div class="col-xs-8">
-            <input class="form-control" id="direccion"
-                   name="direccion" [(ngModel)]="responsable.direccion">
-          </div>
-        </div>
-
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label" for="email">Email:</label>
-          </div>
-          <div class="col-xs-8">
-            <input class="form-control" id="email"
-                   name="email" [(ngModel)]="responsable.email">
-          </div>
-        </div>
-
-        <div class="form-group row flex-items-xs-left">
-          <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required" for="telefono">Telefono:</label>
-          </div>
-          <div class="col-xs-4">
-            <input class="form-control" id="telefono" required
-                   name="telefono" [(ngModel)]="responsable.telefono">
-          </div>
-        </div>
-      </section>
-    </form>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-sm" type="button"
-            (click)="modalResponsableOpen = false">Cancel
-    </button>
-    <button class="btn btn-sm btn-success" type="button"
-            [disabled]="(responsableForm.form.invalid )"
-            (click)="onAddResponsable()">Add
-    </button>
-  </div>
-</clr-modal>
-
 <!--Modal para agregar o editar los datos de un repuesto-->
 <clr-modal [(clrModalOpen)]="modalRepuestosOpen" [clrModalClosable]="false"
            [clrModalSize]="'lg'"
@@ -288,7 +266,7 @@
                       [(ngModel)]="repuesto.tipoEquipo.id"
                       (change)="onSelectedTipoEquipo(selectedTipo.value)">
                 <option *ngFor="let tipo of tipos"
-                        value={{tipo.id}}>{{tipo.nombreGenerico}}, {{tipo.tipo}}
+                        value={{tipo.id}}>{{tipo.tipo}}
                 </option>
               </select>
             </div>
@@ -301,11 +279,11 @@
             </div>
           </div>
           <!--<div class="col-xs-1">-->
-            <!--<button class="form-add-edit-equipo-btn-add btn btn-sm btn-success"-->
-                    <!--(click)="addTipoEquipo()">-->
-              <!--<clr-icon shape="plus"></clr-icon>-->
-              <!--{{buttonTitleTipo}}-->
-            <!--</button>-->
+          <!--<button class="form-add-edit-equipo-btn-add btn btn-sm btn-success"-->
+          <!--(click)="addTipoEquipo()">-->
+          <!--<clr-icon shape="plus"></clr-icon>-->
+          <!--{{buttonTitleTipo}}-->
+          <!--</button>-->
           <!--</div>-->
           <div class="col-xs-2">
             <label class="form-add-edit-solicitud-label required">Modelo:</label>
@@ -316,7 +294,7 @@
                       [(ngModel)]="repuesto.modeloEquipo.id"
                       (change)="onSelectedModeloEquipo(selectedModelo.value)">
                 <option *ngFor="let modelo of modelos"
-                        value={{modelo.id}}>{{modelo.modelo}}, {{modelo.marca}}, {{modelo.clase}}
+                        value={{modelo.id}}>{{modelo.modelo}}, {{modelo.marca}} }}
                 </option>
               </select>
             </div>
@@ -329,11 +307,11 @@
             </div>
           </div>
           <!--<div class="col-xs-1">-->
-            <!--<button class="form-add-edit-equipo-btn-add btn btn-sm btn-success"-->
-                    <!--(click)="addModeloEquipo()">-->
-              <!--<clr-icon shape="plus"></clr-icon>-->
-              <!--{{buttonTitleModelo}}-->
-            <!--</button>-->
+          <!--<button class="form-add-edit-equipo-btn-add btn btn-sm btn-success"-->
+          <!--(click)="addModeloEquipo()">-->
+          <!--<clr-icon shape="plus"></clr-icon>-->
+          <!--{{buttonTitleModelo}}-->
+          <!--</button>-->
           <!--</div>-->
         </div>
 
@@ -343,7 +321,7 @@
           </div>
           <div class="col-xs-2" *ngIf="repuesto.representante != null">
             <input class="form-control" id="representante" required
-                   name="representante" [(ngModel)]="repuesto.representante.nombre"
+                   name="representante" [(ngModel)]="repuesto.representante.empresa"
                    disabled>
           </div>
 
