--- a/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud-repuesto/add-edit-solicitud-repuesto.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud/add-edit-solicitud-repuesto/add-edit-solicitud-repuesto.component.html
@@ -1,120 +1,13 @@
-<h5 class="form-add-edit-solicitud-title">{{tituloForm }}</h5>
-<!--Formulario para la solicitud de servicio-->
-<form class="compact" *ngIf="selectedSolicitudServicio" #solicitudServicioForm="ngForm">
-  <section class="form-block">
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label" for="estado">Estado:</label>
-      </div>
-      <div class="col-xs-3">
-        <input class="form-control" id="estado"
-               name="estado" [(ngModel)]="solicitudServicio.estado">
-      </div>
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label required" for="fechaSolicitud">Fecha:</label>
-      </div>
-      <div class="col-xs-3">
-        <input class="form-control" type="date"
-               id="fechaSolicitud" required
-               name="fechaSolicitud"
-               [(ngModel)]="solicitudServicio.fechaSolicitud">
-      </div>
-    </div>
-
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label required">Personal que informó el problema:</label>
-      </div>
-      <div class="col-xs-3">
-        <input class="form-control" id="personal"
-               [(ngModel)]="solicitudServicio.personalReporte">
-      </div>
-
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitu-label" for="descriptionProb">Descripción del Problema:</label>
-      </div>
-      <div class="col-xs-4">
-            <textarea class="form-control" id="descriptionProb" rows="3"
-                      maxlength="2000"
-                      name="descriptionProb" [(ngModel)]="solicitudServicio.descripcionProblema">
-            </textarea>
-      </div>
-    </div>
-  </section>
-
-  <!--equipos-->
-  <h6 class="form-add-edit-solicitud-title">Información del Equipo</h6>
-  <section class="form-block">
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Nro. Serie:</label>
-      </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="serie">
-      </div>
-
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Nro. Patrimonial:</label>
-      </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="patrimonial">
-      </div>
-
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Tipo:</label>
-      </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="Tipo">
-      </div>
-    </div>
-
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Modelo:</label>
-      </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="modelo">
-      </div>
-
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Ubicación:</label>
-      </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="Ubicación">
-      </div>
-
-      <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label">Contrato:</label>
-      </div>
-      <div class="col-xs-2">
-        <input class="form-control" id="Contrato">
-      </div>
-
-    </div>
-  </section>
-
-  <section class="form-block">
-    <button class="btn btn-sm btn-success"
-            [disabled]="(solicitudServicioForm.form.invalid )"
-            (click)="onSaveSolicitud()">
-      <clr-icon shape="floppy"></clr-icon>
-      Save
-    </button>
-
-    <button class="btn btn-sm btn-secondary"
-            (click)="onCancelAddEditSolicitud()">
-      <clr-icon shape="window-close"></clr-icon>
-      Cancel
-    </button>
-  </section>
-</form>
-
 <!--Formulario para la solicitud de repuestos-->
-<form class="compact" *ngIf="!selectedSolicitudServicio" #solicitudRepuestoForm="ngForm">
+<h5 class="form-add-edit-solicitud-title">{{tituloForm }}</h5>
+<form class="compact"  #solicitudRepuestoForm="ngForm">
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
+      <!--<div class="col-xs-1">-->
+        <!--<label class="form-add-edit-solicitud-label" for="estadoRe">Estado:</label>-->
+      <!--</div>-->
       <div class="col-xs-1">
-        <label class="form-add-edit-solicitud-label" for="estadoRe">Estado:</label>
+        <label class="form-add-edit-solicitud-label" for="estadoRe">Descripción o código:</label>
       </div>
       <div class="col-xs-3">
         <input class="form-control" id="estadoRe"
@@ -122,11 +15,11 @@
       </div>
       <div class="col-xs-1"></div>
       <div class="col-xs-1">
-        <label class="form-add-edit-solicitud-label required" for="fechaSolicitudRe">Fecha:</label>
+        <label class="form-add-edit-solicitud-label" for="fechaSolicitudRe">Fecha:</label>
       </div>
       <div class="col-xs-2">
         <input class="form-control" type="date"
-               id="fechaSolicitudRe" required
+               id="fechaSolicitudRe"
                name="fechaSolicitudRe"
                [(ngModel)]="solicitudRepuesto.fechaSolicitud">
       </div>
@@ -134,7 +27,7 @@
 
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-2">
-        <label class="form-add-edit-solicitud-label required">Repuestos:
+        <label class="form-add-edit-solicitud-label">Repuestos:
         </label>
       </div>
       <div class="col-xs-1">
@@ -205,10 +98,10 @@
       <section class="form-block">
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required" for="codigo">Código:</label>
+            <label class="form-add-edit-solicitud-label" for="codigo">Código:</label>
           </div>
           <div class="col-xs-3">
-            <input class="form-control" id="codigo" required
+            <input class="form-control" id="codigo"
                    name="codigo" [(ngModel)]="repuesto.codigo">
           </div>
           <div class="col-xs-2">
@@ -222,29 +115,29 @@
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required" for="precio">Precio:</label>
+            <label class="form-add-edit-solicitud-label" for="precio">Precio:</label>
           </div>
           <div class="col-xs-3">
-            <input class="form-control" id="precio" required
+            <input class="form-control" id="precio"
                    name="precio" [(ngModel)]="repuesto.precio">
           </div>
 
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required" for="fecha">Fecha:</label>
+            <label class="form-add-edit-solicitud-label" for="fecha">Fecha:</label>
           </div>
           <div class="col-xs-3">
             <input class="form-control" type="date"
-                   id="fecha" name="fecha" required
+                   id="fecha" name="fecha"
                    [(ngModel)]="repuesto.fechaActualizacion">
           </div>
         </div>
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required" for="cantidadAd">Cantidad Adquirida:</label>
+            <label class="form-add-edit-solicitud-label" for="cantidadAd">Cantidad Adquirida:</label>
           </div>
           <div class="col-xs-3">
-            <input class="form-control" id="cantidadAd" required
+            <input class="form-control" id="cantidadAd"
                    name="cantidadAd" [(ngModel)]="repuesto.cantidadAdquirida">
           </div>
           <div class="col-xs-2">
@@ -258,7 +151,7 @@
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required">Tipo:</label>
+            <label class="form-add-edit-solicitud-label">Tipo:</label>
           </div>
           <div class="col-xs-3" *ngIf="repuesto.tipoEquipo != null">
             <div class="select form-control">
@@ -286,7 +179,7 @@
           <!--</button>-->
           <!--</div>-->
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required">Modelo:</label>
+            <label class="form-add-edit-solicitud-label">Modelo:</label>
           </div>
           <div class="col-xs-3" *ngIf="repuesto.modeloEquipo != null">
             <div class="select form-control">
@@ -317,11 +210,11 @@
 
         <div class="form-group row flex-items-xs-left">
           <div class="col-xs-2">
-            <label class="form-add-edit-solicitud-label required">Representante:</label>
+            <label class="form-add-edit-solicitud-label">Representante:</label>
           </div>
           <div class="col-xs-2" *ngIf="repuesto.representante != null">
-            <input class="form-control" id="representante" required
-                   name="representante" [(ngModel)]="repuesto.representante.empresa"
+            <input class="form-control" id="representante"
+                   name="representante" [(ngModel)]="repuesto.representante"
                    disabled>
           </div>
 
@@ -338,6 +231,15 @@
             </button>
           </div>
         </div>
+
+        <div class="form-group row flex-items-xs-left">
+          <div class="col-xs-2">
+            <label class="form-add-edit-solicitud-label" >Foto:</label>
+          </div>
+          <div class="col-xs-3">
+
+          </div>
+        </div>
       </section>
     </form>
   </div>
@@ -346,7 +248,6 @@
             (click)="modalRepuestosOpen = false">Cancel
     </button>
     <button class="btn btn-sm btn-success" type="button"
-            [disabled]="(repuestoForm.form.invalid )"
             (click)="onAddRepuesto()">Add
     </button>
   </div>
