--- a/client-app/src/app/home/equipo/add-edit-equipo/add-edit-equipo.component.css
+++ b/client-app/src/app/home/equipo/add-edit-equipo/add-edit-equipo.component.css
@@ -8,10 +8,29 @@
   text-align: center;
 }
 
-.form-add-edit-equipo-btn-add {
+.btn-add-edit-equipo {
   margin-top: 1% !important;
 }
 
 .col-label-equipo {
   text-align: right !important;
+}
+
+.select .select-form-equipo {
+  border: 1px solid rgba(34, 36, 38, 0.50) !important;
+  border-radius: 0 !important;
+  border-image: initial !important;
+  -webkit-appearance: menulist !important;
+  align-items: center !important;
+  background-color: white !important;
+  cursor: default;
+  background: linear-gradient(to bottom, transparent 95%, #0094d2 95%) no-repeat;
+  height: 30px !important;
+  margin-left: 1% !important;
+  width: 100% !important;
+  display: block;
+}
+
+.col-btn-add-edit-equipo {
+  margin-top: 2% !important;
 }
