Comienzo de cambio en el formulario de contratos.

--- a/client-app/src/app/home/contrato/contrato.component.html
+++ b/client-app/src/app/home/contrato/contrato.component.html
@@ -93,7 +93,7 @@
 <app-add-edit-contrato
   *ngIf="showFormAbmContrato"
   [contrato]='selectedContrato'
-  [tituloForm]='formtitle'
+  [tituloForm]='formTitle'
   [isEdit]='isEdit'
   (onCanceled)="onCancelAddEditContrato($event)"
   (onFinished)="onCloseAddEditContrato($event)">
